responsive.css
 @media screen and (max-width: 450px) and (orientation:portrait) {
   /* * {
     margin-top: 0;
   } */
    .site {
      display: grid;
      grid-template-columns: 100%;
      grid-template-rows:
        12.5vw
        71vw
        80vw
        140vw
        60vw
        60vw
        90vw
        50vw
        210vw
        90vw
        80vw
        20vw;
      grid-template-areas:
        "logo"
        "explore"
        "nebula-text"
        "nebula-image"
        "nebula-text2"
        "quote"
        "lounge"
        "lounge-text"
        "vision-text"  /*grin-in-grid 2x2*/
        "challenge"
        "news"  /*grid-in-grid 3x1*/
        "footer";   /*grin-in-grid  2x1*/
    }

    p {
      font-size: 5vw;
      line-height: 1.2;
    }

    .logo-img {
        grid-area: logo;
        margin-top: 0;
        padding: 2.5vw 46vw;
        background-color: white;
        width: 8vw;
        position: fixed;
        z-index: 100;
        border-bottom: 1px solid lightgrey;
        /* height: ; */
    }
    .topbar {
      display: none;
    }
    .explore-text, .explore-img, .explore-img-small {
      grid-area: explore;
      padding: 0;
      margin: auto;
    }
    .explore-text {
      /* margin-top: 12vh;
      margin-right: 0;
      padding: 0; */
      font-size: 15vw;
      text-align: center;
      /* margin-top: 0; */
    }

    .downarrow {
      display: none;
    }

    .girl-nebula-img {
      grid-area: nebula-image;
      margin: auto 0;
      width: 100%;
    }
    .girl-nebula {
      margin-top: auto;
      grid-gap: 0;
      grid-area: nebula-text;
      grid-template-rows:
      60% 40%;
      grid-template-columns: 100%;
      grid-template-areas:
      "heading"
      "text1"
      /* "text2"; */
      ;
/*
      heading
      text1
      text2 */
    }
    .girl-nebula h2 {
      width: 90%;
      margin: 0;
      padding: 0 5%;
      font-size: 6vw;
      line-height: 1.2;
    }
    .girl-nebula u {
      display: none;
      /* z-index: 100; */
    }
    .girl-nebula-text-1, .girl-nebula-text-2 {
      margin: 0 5vw;
    }
    .girl-nebula-text-2 {
      display: none;
    }
    .mobile-nebula-text-2 {
      grid-area: nebula-text2;
      display: inline-block;
      margin: 0 5vw;
    }

    .quote-img {
      width: 6vw;
    }
    .quote {
      margin: 0;
      padding-bottom: 0;
    }
    .quote-text {
      font-size: 6vw;
    }
    .quote-author {
      font-size: 4vw;
      padding-top: 2vw;
    }

    .lounge-img {
      margin: 0;
      height: auto;
      width: 100%;
    }
    .lounge-verbage{
      grid-area: lounge-text;
      padding-top: 2vw;
      width: 90%;
      /* margin: 0 3vw; */
      margin: 0 auto;
      font-size: 4vw;
      text-align: justify;
    }
    .lounge-verbage strong{
      font-size: 6vw;
      margin: 0 auto;
      text-align: center;
      padding-bottom: 3vw;
    }

    div[class$="-topo"] {
      display: none;
    }
    .vision {
      padding-top: 0;
      grid-area: vision-text;
      display: grid;
      grid-template-columns: 50% 50%;
      grid-template-rows: 20% 30% 20% 30%;

    }

    .vision img {
      display: none;
    }
    div[class^="grey-"], div[class^="white-"]{
      display: none;
    }
    .vision div[class^="text"] {
      margin-left: 5vw;
      margin-right: 1vw;
    }
    .title-v, .text-v {
      grid-area: 1 / 1 / 2 / 3;
    }
    .title-v {
      font-size: 6vw;
      margin: 0 auto;
    }
    .text-v {
      margin-top: 10vw;
      text-align: justify;
      margin-right: 5vw;
    }
    .vision strong{
      font-size: 5.5vw;
    }
    .laptop-img {
      grid-area: 2 / 1 / 3 / 3;
      display: block !important;
      margin: 0;
      width: 100%;
      height: auto;
    }
    .text-gov {
      grid-area: 3 / 2 / 4 / 3;
    }
    .text-startup {
      grid-area: 3 / 1 / 4 / 2;
    }
    .text-corp {
      grid-area: 4 / 2 / 5 / 3;
    }
    .text-public {
      grid-area: 4 / 1 / 5 / 2;
    }


    .lounge-text a, .learn-link, .learn-more, .orange-box, .orange-box2 {
      display: none;
    }

    .challenge, .challenge-chevron {
      padding: 0;
      margin: 0;
    }
    .challenge-chevron {
      width: 6vw;
    }

    .challenge {
      margin: 0;
    }
    .challenge-title {
      font-size: 6vw;
      margin-top: 0;
    }
    .challenge-text {
      text-align: justify;
      font-size: 5vw;
      margin: 4vw 6vw 0;
    }
    .challenge-link {
      font-size: 4vw;
      transition: none;
      margin: 4vh 10vw;
      padding: 2vw 0 2vw 4vw;
      text-align: center;
    }
    /* .challenge-link:hover {
      transition: none;
      margin: 4vh 15vw;
    } */

    .challenge-link span {
      display: none;
    }
    /* .challenge-link:hover span {
      transition: none;
    } */
    .news {
      grid-template-columns: 30% 5% 30% 5% 30%;
      line-height: 1.2;
    }
    .news1{
      grid-area: 1 / 1 / 2 / 2;
    }
    .news2{
      grid-area: 1 / 3 / 2 / 4;
    }
    .news3{
      grid-area: 1 / 5 / 2 / 6;
    }
    .news p {
      font-size: 3.67vw;
    }
    .news strong {
      font-size: 5vw;
      line-height: 1.2;
      margin-right: 2vw;
    }


    .foot {
      grid-template-columns: 50% 50%;
      grid-template-areas:
        "social copyright";
      margin-top: 0;
    }
    .social-media {
      margin-left: 5vw;
    }
    .social-media i {
      width: 5vw;
    }
    .copyright {
      margin-right: 5vw;
      font-size: 3.33vw;
    }

  }

@media screen and (max-width: 736px) and (orientation:landscape) {

  .site {
    grid-template-rows: 15vmin 100vmin 140vmin 75vmin 95vmin 260vmin 90vmin 85vmin 12vmin;
    /* grid-template-rows: 15vh auto; */
    grid-template-areas:
      "space-l1 logo navbar navbar navbar navbar navbar navbar navbar space-r1"
      "space-l2-2 exp-text exp-text exp-text exp-text exp-img exp-img exp-img exp-img space-r1-2"
      "nebula nebula nebula nebula neb-text neb-text neb-text neb-text neb-text neb-text"
      "space-l2 quote quote quote quote quote quote quote quote space-r3"
      "lounge lounge lounge lounge lounge lounge verbage verbage verbage verbage"
      "space-l3 vision vision vision vision vision vision vision vision space-r4"
      "space-l4 challenge challenge challenge challenge challenge challenge challenge challenge space-r5"
      "news news news news news news news news news news"
      "footer footer footer footer footer footer footer footer footer footer";
  }

  .topbar, .downarrow, div[class$="-topo"], .lounge-text a, .learn-link, .learn-more, .orange-box, .orange-box2, div[class^="grey-"], div[class^="white-"] {
    display: none;
  }
  p {
    font-size: 2.25vw;
    line-height: 1.2;
  }

  .logo-img {
      grid-area: 1 / 1 / 2 / 11;
      margin-top: 0;
      padding: 1.5vw 48vw;
      background-color: white;
      width: 4vw;
      position: fixed;
      z-index: 100;
      border-bottom: 1px solid lightgrey;
      /* height: ; */
  }

  .explore-text {
    padding-top: 4vh;
  }

  .girl-nebula-img {
    margin-left: 0;
    width: 95%;
    transition: none;
  }

  .girl-nebula {
    grid-gap: 1vw;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 35% 65%;
    grid-template-areas:
    "heading heading"
    "text1 text2";
  }
  .girl-nebula h2 {
    width: 100%;
    margin-top: 5vmin;
    margin-left: 0;
    font-size: 3vw;
    line-height: 1.2;
  }

  .quote-text {
    font-size: 3vw;
    padding-top: 2vw;
  }

  .quote-author {
    font-size: 2vw;
    padding-top: 2vw;
  }

  .lounge-img {
    margin-left: 0;
    transition: none;
  }

  .lounge-verbage strong {
    margin-left: 2vw;
    text-align: center;
  }

  .lounge-text {
    margin-left: 5vw;
    margin-right: 4vw;
    text-align: justify;
  }

  .vision {
    padding-top: 0;
  }

  .title-v {
    grid-area: 1 / 1 / 2 / 3;
    text-align: center;
    margin-top: 10vw;
  }

  .vision strong {
    font-size: 2.5vw;
  }

  .text-v {
    font-size: 2.5vw;
    margin-top: 3vw;
    margin-left: 3vw;
    margin-right: 8vw;
  }

  .text-gov {
    margin-top: -5vw;
  }
  .text-startup {
    margin-top: -3vw;
  }
  .text-corp {
    margin-top: 0vw;
  }
  .text-public {
    margin-top: -2vw;
  }

  .bking-img {
    margin-left: 0;
    transition: none;
  }
  .text-gov {
    margin-right: 6vw;
  }
  .laptop-img {
    margin-left: 0;
    transition: none;
  }
  .text-startup {
    margin-right: 5vw;
  }
  .boardroom-img {
    margin-left: 3vw;
    transition: none;
  }
  .text-corp {
    margin-right: 3vw;
  }
  .pedestrians-img {
    margin-left: 5vw;
    transition: none;
  }
  .text-public {
    margin-right: 6vw;
  }

  .challenge {
    padding-top: 5vw;
    padding-bottom: 5vw;
  }

  .challenge-chevron {
    margin-bottom: 0;
  }

  .challenge-text {
    font-size: 3vw;
    margin: 0;
  }

  .challenge-link {
    text-align: center;
    padding: 1vw;
    border: 0.2vh solid black;
    margin: 7.8vh 17vw;
    box-shadow: -0.6vh 0.6vh rgb(234,83,24);
    font-weight: bold;
    transition: none;
    color: black;
  }
  /* .challenge-link:hover {
    text-align: center;
    padding: 1vw;
    border: 0.2vh solid black;
    margin: 7.8vh 17vw;
    box-shadow: -0.6vh 0.6vh rgb(234,83,24);
    font-weight: bold;
    transition: none;
    color: black;
  } */
  .challenge-link span {
    color: rgb(234,83,24);
    /* font-size: 1.2vw; */
    margin-left: 1vw;
    transition: none;
  }

  /* .challenge-link:hover span {
    color: rgb(234,83,24);
    font-size: 1.2vw;
    margin-left: 1vw;
    transition: none;
  } */

  .news {
    grid-template-columns: 32% 2% 32% 2% 32%;
    line-height: 1.2;
    margin-top: 2vw;
  }
  .news1{
    grid-area: 1 / 1 / 2 / 2;
  }
  .news2{
    grid-area: 1 / 3 / 2 / 4;
  }
  .news3{
    grid-area: 1 / 5 / 2 / 6;
  }
  .news p {
    font-size: 2vw;
  }
  .news strong {
    font-size: 3vw;
    line-height: 1.2;
    margin-right: 2vw;
  }

  .foot {
    margin-top: 0;
  }
}

